Add migration step to Django workflow

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,9 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Apply Migration
+      run: |
+        python3 manage.py migrate
     - name: Run Tests
       run: |
         python manage.py test
