--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,7 +27,7 @@ jobs:
         pip install -r requirements.txt
     - name: Apply Migration
       run: |
-        python3 manage.py migrate
+        python3 manage.py makemigrations
     - name: Run Tests
       run: |
-        python manage.py test
+        python3 manage.py test
