--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Apply Migration
       run: |
         python3 manage.py makemigrations
+        python3 manage.py migrate
     - name: Run Tests
       run: |
         python3 manage.py test
