--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -40,29 +40,20 @@ jobs:
       run: |
         python3 manage.py test
   
-  code-quality:
-    runs-on: ubuntu-latest
+push: 
+  runs-on: ubuntu-latest
 
-    steps:
+  needs: build
+
+  steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v6
-      with:
-        version: v1.56.2
-  
-  push:
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to DockerHub
       uses: docker/login-action@v3
@@ -70,13 +61,16 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and Push action
+    - name: Build and Push multi-arch image
       uses: docker/build-push-action@v6
       with:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/college-erp-sql:${{github.run_id}}
+        platforms: linux/amd64,linux/arm64
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/college-erp-sql:${{ github.run_id }}
+
 
   update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
