--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,5 +1,3 @@
-# CICD using GitHub actions
-
 name: CI/CD
 
 # Exclude the workflow to run on changes to the helm chart
@@ -20,78 +18,78 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [ 3.13 ]
+        python-version: [3.11]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python3 -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Apply Migration
-      run: |
-        python3 manage.py makemigrations
-        python3 manage.py migrate
-    - name: Run Tests
-      run: |
-        python3 manage.py test
-  
-push: 
-  runs-on: ubuntu-latest
+      - uses: actions/checkout@v4
 
-  needs: build
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
 
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Install Dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
+      - name: Apply Migration
+        run: |
+          python3 manage.py makemigrations
+          python3 manage.py migrate
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Run Tests
+        run: |
+          python3 manage.py test
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+  push:
+    runs-on: ubuntu-latest
+    needs: build
 
-    - name: Build and Push multi-arch image
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        platforms: linux/amd64,linux/arm64
-        tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/college-erp-sql:${{ github.run_id }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push multi-arch image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/college-erp-sql:${{ github.run_id }}
 
   update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
-
     needs: push
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.TOKEN }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TOKEN }}
 
-    - name: Update tag in Helm chart
-      run: |
-        sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/college-erp-chart/values.yaml
+      - name: Update tag in Helm chart
+        run: |
+          sed -i "s/tag: .*/tag: \"${{ github.run_id }}\"/" helm/college-erp-chart/values.yaml
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.email "pkyenugula@gmail.com"
-        git config --global user.name "pyenugula"
-        git add helm/college-erp-chart/values.yaml
-        git commit -m "Update tag in Helm chart"
-        git push
-
+      - name: Commit and push changes
+        run: |
+          git config --global user.email "pkyenugula@gmail.com"
+          git config --global user.name "pyenugula"
+          git add helm/college-erp-chart/values.yaml
+          git commit -m "Update tag in Helm chart" || echo "No changes to commit"
+          git push
